<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowManyCalories">


    <RadioGroup
        android:id="@+id/radioSexGroup"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>
    </RadioGroup>

    <EditText
        android:id="@+id/weightHarrisBenedict"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/radioSexGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioSexGroup" />

    <EditText
        android:id="@+id/heightHarrisBenedict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/radioSexGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioSexGroup" />

    <EditText
        android:id="@+id/ageHarrisBenedict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/radioSexGroup"
        app:layout_constraintTop_toTopOf="@+id/weightHarrisBenedict" />

    <Button
        android:id="@+id/showWhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate_harris_benedict"
        app:layout_constraintStart_toStartOf="@+id/ageHarrisBenedict"
        app:layout_constraintTop_toBottomOf="@+id/ageHarrisBenedict" />

    <TextView
        android:id="@+id/youCanEatText"
        android:layout_width="137dp"
        android:layout_height="19dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="364dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>